Styled the range input
What to work on:
When the user clicks on the Preferences or Restrictions panel, make the Preferences / Restrictions panel be displayed in the overlay panel.

Also what to work on:
Put the CourseListSelection into its own component, and reuse it as many as one likes.

--- a/src/Webpage/app/styles/timetable.css
+++ b/src/Webpage/app/styles/timetable.css
@@ -68,6 +68,13 @@
     display: inline-block;
 }
 
+#midHeaderContent {
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    display: table;
+}
+
 #restrictionsBttn{
     margin-right: 50px;
 }
@@ -123,15 +130,9 @@
     background-color: rgb(217, 217, 217);
 }
 
-.closeSideMenuBttn{
-    position: absolute;
-    right: 20px;
-    top: 20px;
-}
-
 .menuItem {
     margin-left: 10px;
-    margin-right: 20px;
+    margin-right: 50px;
 }
 
 .menuItem h3{
