--- a/src/Webpage/app/styles/restrictions-panel.css
+++ b/src/Webpage/app/styles/restrictions-panel.css
@@ -5,13 +5,15 @@
     padding: 20px 20px 20px 20px;
 }
 
-restrictions-panel .property * {
-    vertical-align: middle;
-    display: inline-block;
+restrictions-panel table{
+    border-collapse: separate;
+    border-spacing: 20px;
 }
 
 restrictions-panel input {
     margin-left: 20px;
     margin-top: 10px;
     margin-bottom: 10px;
+
+    vertical-align: middle;
 }
