Front end changes
Added the capability to define and pass in restrictions and preferences into the web api.

Added caching mechanism to the selected courses so that when the user selects the back button the selected courses doesnt get lost.

--- a/src/Webpage/app/timetables page/preferences/preferences-panel.component.css
+++ b/src/Webpage/app/timetables page/preferences/preferences-panel.component.css
@@ -49,9 +49,9 @@ preferences-panel .selected {
 }
 
 preferences-panel .cancel-bttn{
-
+    float: right;
 }
 
 preferences-panel .apply-bttn{
-
+    float: right;
 }
