--- a/src/Webpage/app/timetables page/preferences/preferences-panel.component.html
+++ b/src/Webpage/app/timetables page/preferences/preferences-panel.component.html
@@ -27,11 +27,11 @@
                 </td>
                 <td>
                     <span class="option"
-                            ng-class="{'selected' : vm.walkDistance === 'min', 'hoverable clickable': vm.walkDistance != 'min'}"
-                            ng-click="vm.changeWalkDistance('min')">Minimum</span>
+                            ng-class="{'selected' : vm.walkDistance === 'minimum', 'hoverable clickable': vm.walkDistance != 'minimum'}"
+                            ng-click="vm.changeWalkDistance('minimum')">Minimum</span>
                     <span class="option"
-                            ng-class="{'selected' : vm.walkDistance === 'max', 'hoverable clickable': vm.walkDistance != 'max'}"
-                            ng-click="vm.changeWalkDistance('max')">Maximum</span>
+                            ng-class="{'selected' : vm.walkDistance === 'maximum', 'hoverable clickable': vm.walkDistance != 'maximum'}"
+                            ng-click="vm.changeWalkDistance('maximum')">Maximum</span>
                 </td>
             </tr>
 
@@ -42,11 +42,11 @@
                 </td>
                 <td>
                     <span class="option"
-                            ng-class="{'selected' : vm.numDaysInClass === 'min', 'hoverable clickable': vm.numDaysInClass != 'min'}"
-                            ng-click="vm.changeNumDaysInClass('min')">Minimum</span>
+                            ng-class="{'selected' : vm.numDaysInClass === 'minimum', 'hoverable clickable': vm.numDaysInClass != 'minimum'}"
+                            ng-click="vm.changeNumDaysInClass('minimum')">Minimum</span>
                     <span class="option"
-                            ng-class="{'selected' : vm.numDaysInClass === 'max', 'hoverable clickable': vm.numDaysInClass != 'max'}"
-                            ng-click="vm.changeNumDaysInClass('max')">Maximum</span>
+                            ng-class="{'selected' : vm.numDaysInClass === 'maximum', 'hoverable clickable': vm.numDaysInClass != 'maximum'}"
+                            ng-click="vm.changeNumDaysInClass('maximum')">Maximum</span>
                 </td>
             </tr>
 
@@ -57,11 +57,11 @@
                 </td>
                 <td>
                     <span class="option"
-                            ng-class="{'selected' : vm.timeBetweenClasses === 'min', 'hoverable clickable': vm.timeBetweenClasses != 'min'}"
-                            ng-click="vm.changeTimeBetweenClasses('min')">Minimum</span>
+                            ng-class="{'selected' : vm.timeBetweenClasses === 'minimum', 'hoverable clickable': vm.timeBetweenClasses != 'minimum'}"
+                            ng-click="vm.changeTimeBetweenClasses('minimum')">Minimum</span>
                     <span class="option"
-                            ng-class="{'selected' : vm.timeBetweenClasses === 'max', 'hoverable clickable': vm.timeBetweenClasses != 'max'}"
-                            ng-click="vm.changeTimeBetweenClasses('max')">Maximum</span>
+                            ng-class="{'selected' : vm.timeBetweenClasses === 'maximum', 'hoverable clickable': vm.timeBetweenClasses != 'maximum'}"
+                            ng-click="vm.changeTimeBetweenClasses('maximum')">Maximum</span>
                 </td>
             </tr>
 
