--- a/src/Webpage/app/courses page/course search bar/course-search-bar.component.css
+++ b/src/Webpage/app/courses page/course search bar/course-search-bar.component.css
@@ -15,6 +15,7 @@ course-search-bar .searchBox {
 course-search-bar .searchResults {
     position: relative;
     width: 100%;
+
     /* We add these margins because the <ul> element will be placed to the very left of this element */
     margin-left: 20%;
     margin-right: 20%;
@@ -26,17 +27,30 @@ course-search-bar .searchResults ul {
     top: 100%;
     width: 60%;
     left: 0px;
+
     /* Set the size of the results box */
     max-height: 50vh; /* Make the max height 50% of the view port */
     margin-top: 0px;
     padding: 0px;
+
     /* Enforce the max height and display scroll bars if needed */
     overflow: auto;
+
     /* Remove any bullet points */
     list-style-type: none;
     border: 1px solid black;
     display: inline-block;
     background-color: white;
+
+    /* Put padding */
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+course-search-bar .searchResults li:hover {
+    cursor: pointer;
 }
 
 course-search-bar .searchResults .description {
@@ -44,6 +58,8 @@ course-search-bar .searchResults .description {
     float: left;
     text-align: left;
     width: 70%;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 course-search-bar .searchResults .campus {
@@ -51,4 +67,6 @@ course-search-bar .searchResults .campus {
     float: right;
     text-align: right;
     width: 30%;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
